# gpu-2025

./: README.md
3822B1FI1/1_gelu_omp/Ionova_ekaterina/: gelu_omp.h
3822B1FI1/1_gelu_omp/elvin_veliev/: gelu_omp.cpp
3822B1FI1/1_gelu_omp/ionova_ekaterina/: gelu_omp.cpp
3822B1FI1/1_gelu_omp/komshina_daria/: gelu_omp.cpp  log.txt
3822B1FI1/1_gelu_omp/shpynov_nikita/: gelu_omp.cpp
3822B1FI1/1_gelu_omp/shulpin_ilya/: gelu_omp.cpp  gelu_omp.h
3822B1FI1/1_gelu_omp/solovev_alexey/: gelu_omp.cpp  log.txt  solovev.cpp
3822B1FI1/1_gelu_omp/somov_ivan/: gelu_omp.cpp
3822B1FI1/1_gelu_omp/vasenkov_andrey/: gelu_omp.cpp  gelu_omp.h  log.txt
3822B1FI1/2_gelu_cuda/elvin_veliev/: gelu_cuda.cu  log.txt
3822B1FI1/2_gelu_cuda/ionova_ekaterina/: gelu_cuda.cu  gelu_cuda.h
3822B1FI1/2_gelu_cuda/komshina_daria/: gelu_cuda.cu
3822B1FI1/2_gelu_cuda/shpynov_nikita/: gelu_cuda.cu
3822B1FI1/2_gelu_cuda/shulpin_ilya/: gelu_cuda.cu  gelu_cuda.h  log.txt
3822B1FI1/2_gelu_cuda/solovev_alexey/: gelu_cuda.cu  log.txt
3822B1FI1/2_gelu_cuda/somov_ivan/: gelu_cuda.cu
3822B1FI1/2_gelu_cuda/vasenkov_andrey/: gelu_cuda.cu
3822B1FI1/3_naive_gemm_omp/elvin_veliev/: naive_gemm_omp.cpp
3822B1FI1/3_naive_gemm_omp/ionova_ekaterina/: naive_gemm_omp.cpp  naive_gemm_omp.h
3822B1FI1/3_naive_gemm_omp/komshina_daria/: naive_gemm_omp.cpp
3822B1FI1/3_naive_gemm_omp/shpynov_nikita/: naive_gemm_omp.cpp
3822B1FI1/3_naive_gemm_omp/shulpin_ilya/: naive_gemm_omp.cpp  naive_gemm_omp.h
3822B1FI1/3_naive_gemm_omp/solovev_alexey/: naive_gemm_omp.cpp
3822B1FI1/3_naive_gemm_omp/somov_ivan/: naive_gemm_omp.cpp
3822B1PE1/3_naive_gemm_omp/: naive_gemm_omp.cpp
3822B1PE1/5_block_gemm_omp/: block_gemm_omp.cpp
3822B1PE3/1_gelu_omp/oturin_alexander/: CMakeLists.txt  accuracy_test.cxx  fastRNG.hpp  gelu_omp.cpp  gelu_omp.h  gelu_omp.hpp  gelu_sequential.cpp  gelu_sequential.hpp  log.txt  main.cxx
(+1076 files in other folders)
